It runs slightly better
Fixing some logical IsSueS