@@ -1,6 +1,7 @@
 package unibs.asd.project;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class MHS {
 
@@ -67,32 +68,32 @@ public class MHS {
             List<Hypothesis> toAdd = new ArrayList<>();
 
             // Fase 1: Identificare elementi da rimuovere e nuove ipotesi
-            for (Hypothesis h : current) {
+            Iterator<Hypothesis> iterator = current.iterator();
+            while (iterator.hasNext()) {
+                Hypothesis h = iterator.next();
                 System.out.println("\nEvaluating hypothesis: " + h);
 
                 if (check(h)) {
                     System.out.println("Found solution: " + h);
                     solutions.add(h);
-                    toRemove.add(h);
+                    iterator.remove();
                 } else if (h.isEmptyHypothesis()) {
                     System.out.println("Hypothesis is empty, generating children");
                     List<Hypothesis> children = generateChildren(h);
                     System.out.println("Generated " + children.size() + " children");
                     toAdd.addAll(children);
-                    toRemove.add(h);
+                    iterator.remove();
                 } else if (h.mostSignificantBit() != 0) {
-                    System.out.println("Processing non-empty hypothesis with MSB: " + h.mostSignificantBit());
                     Hypothesis h_sec = h.globalInitial();
                     System.out.println("Global initial: " + h_sec);
 
-                    // Aggiungi alla lista di rimozione le ipotesi maggiori
-                    for (Hypothesis hypothesis : current) {
-                        if (isGreaterEqual(hypothesis.getBin(), h_sec.getBin())) {
-                            toRemove.add(hypothesis);
-                        }
-                    }
+                    List<Hypothesis> toRemoveNow = current.stream()
+                            .filter(hypothesis -> isGreaterEqual(hypothesis.getBin(), h_sec.getBin()))
+                            .collect(Collectors.toList());
 
-                    if (!current.get(0).equals(h)) {
+                    toRemove.addAll(toRemoveNow);
+
+                    if (!current.getFirst().equals(h)) {
                         System.out.println("Current first hypothesis is different, merging successors");
                         List<Hypothesis> successors = generateChildren(h);
                         List<Hypothesis> merged = merge(toAdd, successors);
@@ -106,9 +107,6 @@ public class MHS {
             // Fase 2: Applicare tutte le modifiche
             current.removeAll(toRemove);
             next.addAll(toAdd);
-
-            System.out.println("Removed " + toRemove.size() + " hypotheses");
-            System.out.println("Next iteration will process " + next.size() + " hypotheses");
 
             current = next;
         }
@@ -132,7 +130,6 @@ public class MHS {
     }
 
     private static List<Hypothesis> merge(Collection<Hypothesis> hypotheses, Collection<Hypothesis> toMerge) {
-        System.out.println("Merging " + hypotheses.size() + " with " + toMerge.size() + " new hypotheses");
         Set<Hypothesis> uniqueHyps = new LinkedHashSet<>();
         uniqueHyps.addAll(hypotheses);
         uniqueHyps.addAll(toMerge);
@@ -140,12 +137,11 @@ public class MHS {
         List<Hypothesis> merged = new ArrayList<>(uniqueHyps);
         merged.sort(Comparator.comparing(Hypothesis::getBin, (bin1, bin2) -> isGreaterEqual(bin1, bin2) ? -1 : 1));
 
-        System.out.println("After merge: " + merged.size() + " unique hypotheses");
         return merged;
     }
 
     public void setFields(Hypothesis h) {
-        System.out.println("Setting fields for hypothesis: " + h);
+        // System.out.println("Setting fields for hypothesis: " + h);
         int n = instance.length;
         int m = instance[0].length;
         boolean[] vector = new boolean[n];
@@ -161,7 +157,7 @@ public class MHS {
                 }
             }
             h.setVector(vector);
-            System.out.println("Vector set for hypothesis: " + Arrays.toString(vector));
+            // System.out.println("Vector set for hypothesis: " + Arrays.toString(vector));
         } else {
             Arrays.fill(vector, false);
             h.setVector(vector);
@@ -180,7 +176,7 @@ public class MHS {
     }
 
     public void propagate(Hypothesis h, Hypothesis h_prime) {
-        System.out.println("Propagating from " + h + " to " + h_prime);
+        // System.out.println("Propagating from " + h + " to " + h_prime);
         boolean[] vector = h.getVector();
         boolean[] vector_prime = h_prime.getVector();
         boolean[] newVector = new boolean[vector.length];
@@ -189,30 +185,30 @@ public class MHS {
             newVector[i] = vector[i] || vector_prime[i];
         }
         h_prime.setVector(newVector);
-        System.out.println(" New vector after propagation: " + Arrays.toString(newVector));
+        // System.out.println(" New vector after propagation: " +
+        // Arrays.toString(newVector));
     }
 
     public List<Hypothesis> generateChildren(Hypothesis h) {
-        System.out.println("Generating children for: " + h);
         List<Hypothesis> children = new ArrayList<>();
 
         if (h.isEmptyHypothesis()) {
-            System.out.println("Generating children for empty hypothesis");
+            // System.out.println("Generating children for empty hypothesis");
             for (int i = 0; i < h.getBin().length; i++) {
                 boolean[] h_new = h.getBin().clone();
                 h_new[i] = true;
                 Hypothesis H_new = new Hypothesis(h_new);
                 setFields(H_new);
                 children.add(H_new);
-                System.out.println("Generated child: " + H_new);
+                // System.out.println("Generated child: " + H_new);
             }
             return children;
         }
-        Hypothesis h_p = current.getFirst();
-        int p = 0;
-        System.out.println("Using h_p: " + h_p);
+        Iterator<Hypothesis> iterator = current.iterator();
+        Hypothesis h_p = iterator.next();
         for (int i = 0; i < h.mostSignificantBit(); i++) {
-            System.out.println("Processing bit position: " + i);
+
+            // System.out.println("Processing bit position: " + i);
             boolean[] h_pr = h.getBin().clone();
             h_pr[i] = true;
             Hypothesis h_prime = new Hypothesis(h_pr);
@@ -222,21 +218,28 @@ public class MHS {
 
             Hypothesis h_s_i = h.initial(h_prime);
             Hypothesis h_s_f = h.finalPred(h_prime);
-            System.out.println("h_s_i: " + h_s_i);
-            System.out.println("h_s_f: " + h_s_f);
+            // System.out.println("h_s_i: " + h_s_i);
+            // System.out.println("h_s_f: " + h_s_f);
+
+            // System.out.println("Using h_p: " + h_p);
 
             int counter = 0;
 
             while (isLessEqual(h_p, h_s_i) && isGreaterEqual(h_p, h_s_f)) {
-                System.out.println("While loop iteration with h_p: " + h_p);
+                // System.out.println("While loop iteration with h_p: " + h_p);
                 if ((distance(h_p, h_prime) == 1) && (distance(h_p, h) == 2)) {
                     propagate(h_p, h_prime);
                     counter++;
                     System.out.println("Propagation counter increased to: " + counter);
                 }
-                p++;
-                h_p = current.get(p);
-                System.out.println("Using h_p: " + h_p);
+
+                if (!iterator.hasNext()) {
+                    System.out.println("No more hypotheses to process, breaking loop");
+                    break;
+                } else {
+                    //// System.out.println("Moving to next hypothesis in iterator");
+                }
+                h_p = iterator.next();
             }
 
             if (counter == h.cardinality()) {
@@ -250,7 +253,7 @@ public class MHS {
 
     public boolean isGreaterEqual(Hypothesis h1, Hypothesis h2) {
         boolean result = isGreaterEqual(h1.getBin(), h2.getBin());
-        System.out.println("    Comparing " + h1 + " > " + h2 + ": " + result);
+        // System.out.println(" Comparing " + h1 + " >= " + h2 + ": " + result);
         return result;
     }
 
@@ -261,7 +264,8 @@ public class MHS {
                 distance++;
             }
         }
-        System.out.println("Distance between " + h1 + " and " + h2 + ": " + distance);
+        // System.out.println("Distance between " + h1 + " and " + h2 + ": " +
+        // distance);
         return distance;
     }
 
@@ -279,7 +283,7 @@ public class MHS {
 
     public boolean isLessEqual(Hypothesis h1, Hypothesis h2) {
         boolean result = isLessEqual(h1.getBin(), h2.getBin());
-        System.out.println("    Comparing " + h1 + " <= " + h2 + ": " + result);
+        // System.out.println(" Comparing " + h1 + " <= " + h2 + ": " + result);
         return result;
     }
 
